--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
           <div class="col-lg-12">
             <div class="caption">
               <h6>Hello!</h6>
-              <h2>Welcome to Statistics Blog</h2>
-              <p>This is a blog about statistics and probability. Here you will find articles about various topics in these fields, including explanations of key concepts, discussions of important research, and practical applications of statistical methods. Whether you're a student, a teacher, a professional, or just someone who's interested in statistics and probability, we hope you'll find something of interest here.</p>
-              <div class="main-button-red">
-                <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
-              </div>
+              <h2>Welcome to Selvastics</h2>
+              <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R. 
+              <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.
+                Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge.</p>
             </div>
           </div>
         </div>
