--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                 <img src="assets/images/service-icon-01.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Education</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
-              </div>
+                <h4>Current Study (German)</h4>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+              </div>              
             </div>
 
             <div class="item">
@@ -137,9 +137,9 @@
                 <img src="assets/images/service-icon-02.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Teachers</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
-              </div>
+                <h4>Alternative Study (German)</h4>
+                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_alt/">Join now!</a></p>
+              </div>                        
             </div>
 
             <div class="item">
@@ -147,9 +147,9 @@
                 <img src="assets/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Students</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
-              </div>
+                <h4>Current Study (German)</h4>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+              </div>              
             </div>
 
             <div class="item">
@@ -157,9 +157,9 @@
                 <img src="assets/images/service-icon-02.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Online Meeting</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
-              </div>
+                <h4>Current Study (German)</h4>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+              </div>              
             </div>
 
             <div class="item">
@@ -167,9 +167,9 @@
                 <img src="assets/images/service-icon-03.png" alt="">
               </div>
               <div class="down-content">
-                <h4>Best Networking</h4>
-                <p>Suspendisse tempor mauris a sem elementum bibendum. Praesent facilisis massa non vestibulum.</p>
-              </div>
+                <h4>Current Study (German)</h4>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+              </div>              
             </div>
 
           </div>
