--- a/index.html
+++ b/index.html
@@ -65,26 +65,39 @@
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
-            <ul class="nav">
+              <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-              <li><a href="spss.html">SPSS</a></li>
-              <li class="scroll-to-section"><a href="#apply">R</a></li>
-              <li class="has-sub">
-                <a href="javascript:void(0)">AI</a>
-                <ul class="sub-menu">
-                  <li><a href="ai.html">Artificial Intelligence</a></li>
-                  <li><a href="ml.html">Machine Learning</a></li>
-                </ul>
+               <li class="has-sub">
+                 <a href="javascript:void(0)">SPSS</a>
+                  <ul class="sub-menu">
+                 <li><a href="spss.html">SPSS Overview</a></li>
+                 <li><a href="spss-tutorials.html">SPSS Tutorials</a></li>
+                 <li><a href="spss-examples.html">SPSS Examples</a></li>
+               </ul>
               </li>
+            <li class="has-sub">
+               <a href="javascript:void(0)">R</a>
+                <ul class="sub-menu">
+                 <li><a href="r.html">R Overview</a></li>
+                 <li><a href="r-tutorials.html">R Tutorials</a></li>
+                 <li><a href="r-examples.html">R Examples</a></li>
+                 </ul>
+                </li>
+               <li class="scroll-to-section"><a href="#apply">R</a></li>
+               <li class="has-sub">
+                 <a href="javascript:void(0)">AI</a>
+                   <ul class="sub-menu">
+                 <li><a href="ai.html">Artificial Intelligence</a></li>
+                <li><a href="ml.html">Machine Learning</a></li>
+                </ul>
+                </li>
               <li class="scroll-to-section"><a href="#courses">Learning</a></li>
               <li class="scroll-to-section"><a href="#contact">Great Articles</a></li>
-              <li class="scroll-to-section"><a href="#studies">Current Studies</a></li>
-              <li class="scroll-to-section"><a href="#about">About Me</a></li>
-            </ul>
-            <a class='menu-trigger'>
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
+             <li class="scroll-to-section"><a href="#studies">Current Studies</a></li>
+             <li class="scroll-to-section"><a href="#about">About Me</a></li>
+</ul>
+<!-- ***** Menu End ***** -->
+
           </nav>
         </div>
       </div>
@@ -103,11 +116,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="caption">
-              <h6>Hello!</h6>
+              <h6></h6>
               <h2>Welcome to Selvastics</h2>
               <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R. 
-              <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.
-                Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge.</p>
+              <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.</p>
+              <p> Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge.</p>
             </div>
           </div>
         </div>
@@ -138,7 +151,7 @@
               </div>
               <div class="down-content">
                 <h4>Alternative Study (German)</h4>
-                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_alt/">Join now!</a></p>
+                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc_pa22/">Join now!</a></p>
               </div>                        
             </div>
 
