--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+              </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
 
@@ -151,7 +152,8 @@
               </div>
               <div class="down-content">
                 <h4>Alternative Study (German)</h4>
-                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc_pa22/">Join now!</a></p>
+                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. </p>
+                </p><a href="https://www.soscisurvey.de/cselva_rc_pa22/">Join now!</a></p>
               </div>                        
             </div>
 
@@ -161,7 +163,8 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+              </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
 
@@ -171,7 +174,8 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18.</p>
+              </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
 
@@ -181,7 +185,8 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. <a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+              </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
 
