--- a/index.html
+++ b/index.html
@@ -777,8 +777,7 @@
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+      <p>Copyright © 2023 Selvastics. All Rights Reserved. </p>
     </div>
   </section>
 
