--- a/index.html
+++ b/index.html
@@ -76,24 +76,23 @@
                </ul>
               </li>
             <li class="has-sub">
-               <a href="javascript:void(0)">R</a>
-                <ul class="sub-menu">
-                 <li><a href="r.html">R Overview</a></li>
-                 <li><a href="r-tutorials.html">R Tutorials</a></li>
-                 <li><a href="r-examples.html">R Examples</a></li>
-                 </ul>
-                </li>
-               <li class="scroll-to-section"><a href="#apply">R</a></li>
-               <li class="has-sub">
-                 <a href="javascript:void(0)">AI</a>
-                   <ul class="sub-menu">
-                 <li><a href="ai.html">Artificial Intelligence</a></li>
+              <a href="javascript:void(0)">R</a>
+              <ul class="sub-menu">
+                <li><a href="r.html">R Overview</a></li>
+                <li><a href="r-tutorials.html">R Tutorials</a></li>
+                <li><a href="r-examples.html">R Examples</a></li>
+              </ul>
+            </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">AI</a>
+              <ul class="sub-menu">
+                <li><a href="ai.html">Artificial Intelligence</a></li>
                 <li><a href="ml.html">Machine Learning</a></li>
-                </ul>
-                </li>
+              </ul>
+            </li>
               <li class="scroll-to-section"><a href="#courses">Learning</a></li>
               <li class="scroll-to-section"><a href="#contact">Great Articles</a></li>
-             <li class="scroll-to-section"><a href="#studies">Current Studies</a></li>
+              <li class="scroll-to-section"><a href="great_articles.html">Great Articles</a></li>
              <li class="scroll-to-section"><a href="#about">About Me</a></li>
 </ul>
 <!-- ***** Menu End ***** -->
@@ -120,7 +119,7 @@
               <h2>Welcome to Selvastics</h2>
               <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R. 
               <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.</p>
-              <p> Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge.</p>
+              <p> Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge!</p>
             </div>
           </div>
         </div>
