--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
               </ul>
             </li>
               <li class="scroll-to-section"><a href="#courses">Learning</a></li>
-              <li class="scroll-to-section"><a href="#contact">Great Articles</a></li>
               <li class="scroll-to-section"><a href="great_articles.html">Great Articles</a></li>
-             <li class="scroll-to-section"><a href="#about">About Me</a></li>
+              <li class="scroll-to-section"><a href="great_articles.html">Great Articles</a></li>
+             <li class="scroll-to-section"><a href="meetings.html">About Me</a></li>
 </ul>
 <!-- ***** Menu End ***** -->
 
