--- a/index.html
+++ b/index.html
@@ -91,8 +91,16 @@
               </ul>
             </li>
               <li class="scroll-to-section"><a href="#courses">Learning</a></li>
-              <li class="scroll-to-section"><a href="great_articles.html">Great Articles</a></li>
-              <li class="scroll-to-section"><a href="great_articles.html">Great Articles</a></li>
+              <li class="has-sub">
+                <a href="javascript:void(0)">Learning</a>
+                <ul class="sub-menu">
+                  <li><a href="#descriptive">Descriptive Statistics</a></li>
+                  <li><a href="#inferential">Inferential Statistics</a></li>
+                </ul>
+              </li>
+              
+              <li><a href="great_articles.html">Great Articles</a></li>
+
              <li class="scroll-to-section"><a href="meetings.html">About Me</a></li>
 </ul>
 <!-- ***** Menu End ***** -->
