--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
                 <li><a href="ml.html">Machine Learning</a></li>
               </ul>
             </li>
-              <li class="scroll-to-section"><a href="#courses">Learning</a></li>
-              <li class="has-sub">
-                <a href="javascript:void(0)">Learning</a>
-                <ul class="sub-menu">
-                  <li><a href="#descriptive">Descriptive Statistics</a></li>
-                  <li><a href="#inferential">Inferential Statistics</a></li>
-                </ul>
-              </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">Learning</a>
+              <ul class="sub-menu">
+                <li><a href="#descriptive">Descriptive Statistics</a></li>
+                <li><a href="#inferential">Inferential Statistics</a></li>
+              </ul>
+            </li>            
               
               <li><a href="great_articles.html">Great Articles</a></li>
 
@@ -148,7 +147,7 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire takes 75 minutes to complete and is open to German participants over 18. </p>
               </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
@@ -159,7 +158,7 @@
               </div>
               <div class="down-content">
                 <h4>Alternative Study (German)</h4>
-                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire only takes 55 minutes to complete and is open to German participants over 18. </p>
+                <p>Explore your resilience and coping strategies! Participate in our alternative study and have a chance to win 1 of 3 €20 Amazon gift cards. The questionnaire takes 55 minutes to complete and is open to German participants over 18. </p>
                 </p><a href="https://www.soscisurvey.de/cselva_rc_pa22/">Join now!</a></p>
               </div>                        
             </div>
@@ -170,7 +169,7 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire takes 75 minutes to complete and is open to German participants over 18. </p>
               </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
@@ -181,7 +180,7 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18.</p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire takes 75 minutes to complete and is open to German participants over 18.</p>
               </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
@@ -192,7 +191,7 @@
               </div>
               <div class="down-content">
                 <h4>Current Study (German)</h4>
-                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire only takes 75 minutes to complete and is open to German participants over 18. </p>
+                <p>Discover your resilience and coping strategies! Take part in our study and receive a personalized psychological personality report. The questionnaire takes 75 minutes to complete and is open to German participants over 18. </p>
               </p><a href="https://www.soscisurvey.de/cselva_rc/">Join now!</a></p>
               </div>              
             </div>
@@ -208,7 +207,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading">
-            <h2>Upcoming SPSS Meetings</h2>
+            <h2>Useful links and tools</h2>
           </div>
         </div>
         <div class="col-lg-4">
@@ -231,17 +230,11 @@
             <div class="col-lg-6">
               <div class="meeting-item">
                 <div class="thumb">
-                  <div class="price">
-                    <span>$22.00</span>
-                  </div>
-                  <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt="New Lecturer Meeting"></a>
+                  <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt="Find data sets"></a>
                 </div>
                 <div class="down-content">
-                  <div class="date">
-                    <h6>Nov <span>10</span></h6>
-                  </div>
-                  <a href="meeting-details.html"><h4>New Lecturers Meeting</h4></a>
-                  <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                  <a href="https://www.kaggle.com/datasets" target="_blank"><h4>Find data sets</h4></a>
+                  <p>Use <a href="https://www.kaggle.com/datasets" target="_blank" style="text-decoration: underline;">Kaggle</a> to find suitable datasets (and more) for your analysis.</p>
                 </div>
               </div>
             </div>
