--- a/great_articles.html
+++ b/great_articles.html
@@ -109,23 +109,43 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="meetings.html" class="active">Meetings</a></li>
-              <li><a href="index.html">Apply Now</a></li>
-              <li class="has-sub">
-                <a href="javascript:void(0)">Pages</a>
-                <ul class="sub-menu">
-                  <li><a href="meetings.html">Upcoming Meetings</a></li>
-                  <li><a href="meeting-details.html">Meeting Details</a></li>
-                </ul>
+              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+               <li class="has-sub">
+                 <a href="javascript:void(0)">SPSS</a>
+                  <ul class="sub-menu">
+                 <li><a href="spss.html">SPSS Overview</a></li>
+                 <li><a href="spss-tutorials.html">SPSS Tutorials</a></li>
+                 <li><a href="spss-examples.html">SPSS Examples</a></li>
+               </ul>
               </li>
-              <li><a href="index.html">Courses</a></li>
-              <li><a href="index.html">Contact Us</a></li>
-            </ul>
-            <a class="menu-trigger">
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
+            <li class="has-sub">
+              <a href="javascript:void(0)">R</a>
+              <ul class="sub-menu">
+                <li><a href="r.html">R Overview</a></li>
+                <li><a href="r-tutorials.html">R Tutorials</a></li>
+                <li><a href="r-examples.html">R Examples</a></li>
+              </ul>
+            </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">AI</a>
+              <ul class="sub-menu">
+                <li><a href="ai.html">Artificial Intelligence</a></li>
+                <li><a href="ml.html">Machine Learning</a></li>
+              </ul>
+            </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">Learning</a>
+              <ul class="sub-menu">
+                <li><a href="#descriptive">Descriptive Statistics</a></li>
+                <li><a href="#inferential">Inferential Statistics</a></li>
+              </ul>
+            </li>            
+              
+              <li><a href="great_articles.html">Great Articles</a></li>
+
+             <li class="scroll-to-section"><a href="meetings.html">About Me</a></li>
+</ul>
+<!-- ***** Menu End ***** -->
           </nav>
         </div>
       </div>
