--- a/meeting-details.html
+++ b/meeting-details.html
@@ -22,10 +22,6 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
 <!--
 
-TemplateMo 569 Edu Meeting
-
-https://templatemo.com/tm-569-edu-meeting
-
 -->
   </head>
 
@@ -39,7 +35,7 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
+            <p>This is a statistics blog by Selvastics.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
@@ -58,34 +54,54 @@ https://templatemo.com/tm-569-edu-meeting
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                  <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
-                          Edu Meeting
-                      </a>
-                      <!-- ***** Logo End ***** -->
-                      <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="meetings.html" class="active">Meetings</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
-                          <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
-                              <ul class="sub-menu">
-                                  <li><a href="meetings.html">Upcoming Meetings</a></li>
-                                  <li><a href="meeting-details.html">Meeting Details</a></li>
-                              </ul>
-                          </li>
-                          <li><a href="index.html">Courses</a></li> 
-                          <li><a href="index.html">Contact Us</a></li> 
-                      </ul>        
-                      <a class='menu-trigger'>
-                          <span>Menu</span>
-                      </a>
-                      <!-- ***** Menu End ***** -->
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">
+              Selvastics
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+               <li class="has-sub">
+                 <a href="javascript:void(0)">SPSS</a>
+                  <ul class="sub-menu">
+                 <li><a href="spss.html">SPSS Overview</a></li>
+                 <li><a href="spss-tutorials.html">SPSS Tutorials</a></li>
+                 <li><a href="spss-examples.html">SPSS Examples</a></li>
+               </ul>
+              </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">R</a>
+              <ul class="sub-menu">
+                <li><a href="r.html">R Overview</a></li>
+                <li><a href="r-tutorials.html">R Tutorials</a></li>
+                <li><a href="r-examples.html">R Examples</a></li>
+              </ul>
+            </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">AI</a>
+              <ul class="sub-menu">
+                <li><a href="ai.html">Artificial Intelligence</a></li>
+                <li><a href="ml.html">Machine Learning</a></li>
+              </ul>
+            </li>
+            <li class="has-sub">
+              <a href="javascript:void(0)">Learning</a>
+              <ul class="sub-menu">
+                <li><a href="#descriptive">Descriptive Statistics</a></li>
+                <li><a href="#inferential">Inferential Statistics</a></li>
+              </ul>
+            </li>            
+              
+              <li><a href="great_articles.html">Great Articles</a></li>
+
+             <li class="scroll-to-section"><a href="meetings.html">About Me</a></li>
+</ul>
+<!-- ***** Menu End ***** -->
                   </nav>
               </div>
           </div>
@@ -111,15 +127,6 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="row">
             <div class="col-lg-12">
               <div class="meeting-single-item">
-                <div class="thumb">
-                  <div class="price">
-                    <span>$14.00</span>
-                  </div>
-                  <div class="date">
-                    <h6>Nov <span>12</span></h6>
-                  </div>
-                  <a href="meeting-details.html"><img src="assets/images/single-meeting.jpg" alt=""></a>
-                </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
                   <p>Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008, Brazil</p>
@@ -172,12 +179,10 @@ https://templatemo.com/tm-569-edu-meeting
         </div>
       </div>
     </div>
-    <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
-    </div>
-  </section>
-
+      <div class="footer">
+        <p>Copyright © 2023 Selvastics. Made with <3 and ☕ in Cologne, Germany. All Rights Reserved. </p>
+     </div>
+   </section>      
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
