--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               
               <li><a href="great_articles.html">Great Articles</a></li>
 
-             <li class="scroll-to-section"><a href="meetings.html">About Me</a></li>
+             <li class="scroll-to-section"><a href="great_articles_x.html">About Me</a></li>
 </ul>
 <!-- ***** Menu End ***** -->
 
@@ -777,7 +777,7 @@
       </div>
     </div>
     <div class="footer">
-      <p>Copyright © 2023 Selvastics. All Rights Reserved. </p>
+       <p>Copyright © 2023 Selvastics. Made with <3 and ☕ in Cologne, Germany. All Rights Reserved. </p>
     </div>
   </section>
 
