--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
               <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
                <li class="has-sub">
                  <a href="javascript:void(0)">SPSS</a>
                   <ul class="sub-menu">
