--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li class="has-sub">
               <a href="javascript:void(0)">Learning</a>
               <ul class="sub-menu">
-                <li><a href="#descriptive">Descriptive Statistics</a></li>
+                <li><a href="descriptives.html">Descriptive Statistics</a></li>
                 <li><a href="#inferential">Inferential Statistics</a></li>
               </ul>
             </li>            
